add lang attribute to body based on origin; use lang-specific admonition labels

--- a/preview-site-src/ui-model.yml
+++ b/preview-site-src/ui-model.yml
@@ -213,3 +213,5 @@ page:
   - content: *page_title
     url: *page_url
   navigation: []
+  origin:
+    url: git@github.com:mulesoft/docs-visualizer-jp
